32-bit build failures after JDK-8199712 (Flight Recorder)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • jfr
    • b14

        x86_32, arm32-hflt:

        1) ----------------------------------------------------------------------------------------------------------
        /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/jfr/utilities/jfrAllocation.cpp: In function 'void subtract(size_t)':
        /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/jfr/utilities/jfrAllocation.cpp:69:87: error: format '%lld' expects argument of type 'long long int', but argument 2 has type 'size_t {aka unsigned int}' [-Werror=format=]
             log_trace(jfr, system)("Total dealloc [" JLONG_FORMAT "] bytes", total_deallocated);
                                                                                               ^
        /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/jfr/utilities/jfrAllocation.cpp:70:86: error: format '%lld' expects argument of type 'long long int', but argument 2 has type 'size_t {aka unsigned int}' [-Werror=format=]
             log_trace(jfr, system)("Liveset: [" JLONG_FORMAT "] bytes", current_live_set);
                                                                                              ^
        2) ----------------------------------------------------------------------------------------------------------

        /home/shade/jdk-jdk/src/hotspot/share/jfr/instrumentation/jfrEventClassTransformer.cpp: In function ‘u1* new_bytes_for_lazy_instrumentation(const InstanceKlass*, const ClassFileParser&, jint&, Thread*)’:
        /home/shade/jdk-jdk/src/hotspot/share/jfr/instrumentation/jfrEventClassTransformer.cpp:1235:34: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
           assert(writer.current_offset() == orig_access_flag_offset, "invariant"); // same positions
                  ~~~~~~~~~~~~~~~~~~~~~~~~^~~~
        /home/shade/jdk-jdk/src/hotspot/share/utilities/debug.hpp:55:9: note: in definition of macro ‘vmassert’
           if (!(p)) { \
                 ^
        /home/shade/jdk-jdk/src/hotspot/share/jfr/instrumentation/jfrEventClassTransformer.cpp:1235:3: note: in expansion of macro ‘assert’
           assert(writer.current_offset() == orig_access_flag_offset, "invariant"); // same positions
           ... (rest of output omitted)

        3) ----------------------------------------------------------------------------------------------------------

        /home/shade/jdk-jdk/build/linux-x86-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/jfrStringPoolBuffer.o: In function `unsigned long long Atomic::FetchAndAdd<Atomic::PlatformAdd<8u> >::operator()<unsigned long long, unsigned long long>(unsigned long long, unsigned long long volatile*, atomic_memory_order) const':
        /home/shade/jdk-jdk/src/hotspot/share/runtime/atomic.hpp:670: undefined reference to `unsigned long long Atomic::PlatformAdd<8u>::fetch_and_add<unsigned long long, unsigned long long>(unsigned long long, unsigned long long volatile*, atomic_memory_order) const'

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: