8203274: 32-bit build failures after JDK-8199712 (Flight Recorder)

Reviewed-by: mgronlun