src/hotspot/share/jfr/utilities/jfrAllocation.cpp
@@ -66,8 +66,8 @@ static void subtract(size_t dealloc_size) {
     const size_t total_deallocated = atomic_add_jlong(dealloc_size, &_deallocated_bytes);
     const size_t current_live_set = atomic_add_jlong(dealloc_size * -1, &_live_set_bytes);
     log_trace(jfr, system)("Deallocation: [" SIZE_FORMAT "] bytes", dealloc_size);
-    log_trace(jfr, system)("Total dealloc [" JLONG_FORMAT "] bytes", total_deallocated);
-    log_trace(jfr, system)("Liveset:      [" JLONG_FORMAT "] bytes", current_live_set);
+    log_trace(jfr, system)("Total dealloc [" SIZE_FORMAT "] bytes", total_deallocated);
+    log_trace(jfr, system)("Liveset:      [" SIZE_FORMAT "] bytes", current_live_set);
   }
 }
 
